Correção de quase todos os headers, se tiver coisa errada, a culpa é do Matheus ou do Kaue

--- a/beneficios-alimentacao-equilibrada/beneficios.html
+++ b/beneficios-alimentacao-equilibrada/beneficios.html
@@ -8,26 +8,29 @@
     <link rel="stylesheet" href="css/style-beneficios.css"/>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="img beneficios-alimentação-equilibrada/logoFitlySemTexto.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
+  
+   <header>
+    <div class="logo">
+      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
+      <a href="../index.html">Fitly</a>
+    </div>
+    <div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a href="../index.html">Início</a>
           </li>
           <li>
-            <a href="#plataforma">Nossa Plataforma</a>
+            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
           </li>
           <li>
-            <a href="#inicio">Início</a>
+            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
           </li>
         </ul>
       </nav>
-    </header>
-    <main>
+    </div>
+  </header> 
+  <main>
       <section>
         <h1>Benefícios da alimentação equilibrada</h1>
         <p class="meio">
