--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-  <header>
+  
+   <header>
     <div class="logo">
-      <img src="../Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo"/>
+      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
       <a href="../index.html">Fitly</a>
     </div>
     <div>
@@ -22,16 +23,15 @@
             <a href="../index.html">Início</a>
           </li>
           <li>
-            <a class="contato" href="artigoPrincipal.html">Artigos</a>
+            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
           </li>
           <li>
-            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
           </li>
         </ul>
       </nav>
     </div>
   </header>
-
   <main>
     <section class="introduction">
       <h2>Alimentação Equilibrada</h2>
