--- a/Artigos/artigoPrincipal.html
+++ b/Artigos/artigoPrincipal.html
@@ -8,25 +8,29 @@
     <link rel="stylesheet" href="/Artigos/CSS/artigoPrincipal.css"/>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="img artigoPrincipal/Captura_de_tela_2025-08-24_165054-removebg-preview.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
+   <header>
+    <div class="logo">
+      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
+      <a href="../index.html">Fitly</a>
+    </div>
+    <div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="artigoPrincipal.html">Artigos</a>
+            <a href="../index.html">Início</a>
           </li>
           <li>
-            <a href="#plataforma">Nossa Plataforma</a>
+            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
           </li>
           <li>
-            <a href="#inicio">Início</a>
+            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
           </li>
         </ul>
       </nav>
-    </header>
+    </div>
+  </header>
+  
+  
     <main>
         <section>
             <h1>Artigos Principais</h1>
