--- a/Artigos/micro-habitos.html
+++ b/Artigos/micro-habitos.html
@@ -7,27 +7,28 @@
     <link rel="stylesheet" href="CSS/micro-habitos.css" />
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="../Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo" />
-        <a href="../index.html">Fitly</a>
-      </div>
-      <div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#inicio">Início</a>
-            </li>
-            <li>
-              <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
-            </li>
-            <li>
-              <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+   <header>
+    <div class="logo">
+      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
+      <a href="../index.html">Fitly</a>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li>
+            <a href="../index.html">Início</a>
+          </li>
+          <li>
+            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  
     <main>
       <section class="introdução">
         <h2>
