--- a/Sobre o projeto/sobreProjeto.html
+++ b/Sobre o projeto/sobreProjeto.html
@@ -7,26 +7,26 @@
  <link rel="stylesheet" href="css/sobreProjeto.css" />
 </head>
 <body>
-  <header>
+   <header>
     <div class="logo">
-      <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-      <a href="/FitlyApp"><h2>Fitly</h2></a>
+      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
+      <a href="../index.html">Fitly</a>
     </div>
-    <nav>
-      <ul>
-        <li>
-          <a class="contato" href="/TrabalhandoNisso.html">Artigos</a>
-        </li>
-        <li>
-          <a href="/sobreProjeto.html">Sobre o projeto</a>
-        </li>
-
-
-        <li>
-          <a href="#inicio">Início</a>
-        </li>
-      </ul>
-    </nav>
+    <div>
+      <nav>
+        <ul>
+          <li>
+            <a href="../index.html">Início</a>
+          </li>
+          <li>
+            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
  <main>
      <h1>Sobre o projeto</h1>
