adicao de algumas imagens

--- a/Sobre o projeto/sobreProjeto.html
+++ b/Sobre o projeto/sobreProjeto.html
@@ -23,7 +23,7 @@
 
 
         <li>
-          <a href="#inicio">Início</a>
+          <a href="/index.html">Início</a>
         </li>
       </ul>
     </nav>
@@ -38,6 +38,9 @@
              <ul class="primeira-dupla">
                  <li>
                      <strong>Igor Marcon Michels:</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
+                     <p>
+                      <img class="imagem" src="/Imagens/Img integrantes/igor.jpg" alt="Igor Michels">
+                     </p>
                  </li>
                  <li>
                      <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
