--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -10,28 +10,25 @@
 </head>
 
 <body>
-  
-   <header>
-    <div class="logo">
-      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
-      <a href="../index.html">Fitly</a>
-    </div>
-    <div>
+    <header>
+      <div class="logo">
+        <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </div>
       <nav>
         <ul>
           <li>
-            <a href="../index.html">Início</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre o projeto/">Sobre O Projeto</a>
           </li>
           <li>
-            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
         </ul>
       </nav>
-    </div>
-  </header>
+    </header>
   <main>
     <section class="introduction">
       <h2>Alimentação Equilibrada</h2>
