--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -5,30 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beneficios alimentação saudavel</title>
     <link rel="stylesheet" href="/beneficios-alimentacao-equilibrada/css/reset.css"/>
-    <link rel="stylesheet" href="/Artigos/CSS/artigoPrincipal.css"/>
+    <link rel="stylesheet" href="CSS/artigoPrincipal.css"/>
   </head>
   <body>
-   <header>
-    <div class="logo">
-      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
-      <a href="../index.html">Fitly</a>
-    </div>
-    <div>
+    <header>
+      <div class="logo">
+        <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </div>
       <nav>
         <ul>
           <li>
-            <a href="../index.html">Início</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre o projeto/">Sobre O Projeto</a>
           </li>
           <li>
-            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
         </ul>
       </nav>
-    </div>
-  </header>
+    </header>
   
   
     <main>
