--- a/Sobre o projeto/sobreProjeto.html
+++ b/Sobre o projeto/sobreProjeto.html
@@ -7,27 +7,25 @@
  <link rel="stylesheet" href="css/sobreProjeto.css" />
 </head>
 <body>
-   <header>
-    <div class="logo">
-      <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo"/>
-      <a href="../index.html">Fitly</a>
-    </div>
-    <div>
+    <header>
+      <div class="logo">
+        <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </div>
       <nav>
         <ul>
           <li>
-            <a href="../index.html">Início</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre o projeto/">Sobre O Projeto</a>
           </li>
           <li>
-            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
         </ul>
       </nav>
-    </div>
-  </header>
+    </header>
  <main>
      <h1>Sobre o projeto</h1>
      <p>O Fitly é uma plataforma inovadora dedicada à organização da alimentação diária, com foco em proporcionar uma experiência personalizada e eficaz para atingir os objetivos de saúde e bem-estar dos usuários.</p>
