--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
                 </p>
                 <ul>
                     <li>
-                        <a href="">
-                            <span class="fa-brands fa-instagram"></span></a>
+                        <a href=""><span class="fa-brands fa-instagram"><span><a>
                     </li>
                     <li>
                         <a href=""><span class="fa-brands fa-tiktok"></span></a>
