--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -7,29 +7,6 @@
  <link rel="stylesheet" href="css/sobreProjeto.css" />
 </head>
 <body>
-<<<<<<< HEAD
-  <header>
-    <div class="logo">
-      <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-      <a href="/FitlyApp"><h2>Fitly</h2></a>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a class="contato" href="/TrabalhandoNisso.html">Artigos</a>
-        </li>
-        <li>
-          <a href="/sobreProjeto.html">Sobre o projeto</a>
-        </li>
-
-
-        <li>
-          <a href="/index.html">Início</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-=======
     <header>
       <div class="logo">
         <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
@@ -49,7 +26,6 @@
         </ul>
       </nav>
     </header>
->>>>>>> 98556398ba3bfe88df401f32480ac7da80278fec
  <main>
   <section class="sobre">
     <h1>Sobre o projeto</h1>
@@ -64,13 +40,13 @@
           <li>
             <strong>Igor Marcon Michels:</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
             <p>
-              <img class="imagem" src="/Imagens/Img integrantes/igor.jpg" alt="Igor Michels">
+              <img src="/FitlyApp/Imagens/Img integrantes/igor.jpg" alt="Igor Michels">
             </p>
           </li>
           <li>
             <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
             <p>
-              <img class="imagem" src="/Imagens/Img integrantes/Pedroj.jpg" alt="Pedro josé">
+              <img src="/FitlyApp\Imagens\Img integrantes\Pedroj.jpg" alt="Pedro josé">
             </p>
           </li>
         </ul>
@@ -81,7 +57,7 @@
           <li>
             <strong>Victor Murilo Bernardes:</strong> Secretário do projeto, responsável pela descrição e desenvolvimento das atas de reunião;
             <p>
-              <img class="imagem" src="/Imagens/Img integrantes/Victor Murilo.jpeg" alt="Victor Murilo">
+              <img src="/FitlyApp/Imagens/Img integrantes/Victor Murilo.jpeg" alt="Victor Murilo">
             </p>
           </li>
         </ul>
@@ -101,7 +77,7 @@
         <div>
             <div class="logo">
                 <a href="index.html">
-                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
