--- a/TrabalhandoNisso.html
+++ b/TrabalhandoNisso.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
@@ -29,8 +29,5 @@
         <a href="/FitlyApp"> <i class="fa-solid fa-house"></i>  Volte A Página Inicial</a>
         </section>
     </main>
-    <footer>
-        
-    </footer>
 </body>
 </html>
