Continuação Página Inicial

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <section>
 
         </section>
-        <section id="CTA" class="CTA">
+        <section class="CTA">
+          <h2>Sua jornada para o topo começa <br> com o primeiro passo.</h2>
           <a href="TrabalhandoNisso.html">Comece Agora</a>
           <img src="Imagens/img pag inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg" alt="">
         </section>
