Correção das logos bugadas (isso foi culpa minha) E DO LINKS, AMANHÃ A GENTE RESOLVE

--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -19,7 +19,7 @@
             <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <a href="/FitlyApp/Sobre o projeto/">Sobre O Projeto</a>
+            <a href="../Sobre-o-projeto/index.html">Sobre O Projeto</a>
           </li>
           <li>
             <a href="/FitlyApp/">Início</a>
