--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <div class="logo">
-        <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
