--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <nav>
         <ul>
           <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            <a class="contato" href="Artigos/index.html">Artigos</a>
           </li>
           <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
+            <a href="Sobre-o-projeto/index.html">Sobre o projeto</a>
           </li>
           <li>
             <a href="#plataforma">Nossa Plataforma</a>
