--- a/Artigos/beneficios.html
+++ b/Artigos/beneficios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beneficios alimentação saudavel</title>
-    <link rel="stylesheet" href="css/style-beneficios.css"/>
+    <link rel="stylesheet" href="CSS/style-beneficios.css"/>
   </head>
   <body>
     <header>
