--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -19,7 +19,8 @@
     </div>
     <nav>
       <ul>
-        <a href="/FitlyApp/Sobre o projeto/">Sobre O Projeto</a>
+        <li>
+        <a href="../Sobre o projeto/sobreProjeto.html">Sobre O Projeto</a>
       </li>
       <li>
         <a href="/FitlyApp/">Início</a>
@@ -27,7 +28,6 @@
       <li>
         <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
       </li>
-      <li>
     </ul>
     </nav>
   </header>
