--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -20,7 +20,7 @@
     <nav>
       <ul>
         <li>
-        <a href="../Sobre o projeto/sobreProjeto.html">Sobre O Projeto</a>
+        <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
       </li>
       <li>
         <a href="/FitlyApp/">Início</a>
