--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -16,14 +16,14 @@
     <nav>
       <ul>
         <li>
-          <a class="contato" href="/TrabalhandoNisso.html">Artigos</a>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
         </li>
+      <li>
+        <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
+      </li>
+      <li>
         <a href="/index.html">Início</a>
       </li>
-      <li>
-        <a href="/sobreProjeto.html">Sobre o projeto</a>
-      </li>
-      <li>
     </ul>
     </nav>
   </header>
