--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -20,13 +20,13 @@
     <nav>
       <ul>
         <li>
-          <a href="../Sobre-o-projeto/index.html">Sobre O Projeto</a>
+          <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
         </li>
         <li>
-          <a href="../index.html">Início</a>
+          <a href="/FitlyApp/">Início</a>
         </li>
         <li>
-          <a class="contato" href="index.html">Artigos</a>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
         </li>
       </ul>
     </nav>
