--- a/Artigos/organização_alimentar.html
+++ b/Artigos/organização_alimentar.html
@@ -21,7 +21,7 @@
             <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <a href="/FitlyApp/Sobre o projeto/">Sobre O Projeto</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
           </li>
           <li>
             <a href="/FitlyApp/">Início</a>
