--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="contato" href="Artigos/index.html">Artigos</a>
           </li>
           <li>
-            <a href="Sobre-o-projeto/index.html">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
           </li>
           <li>
             <a href="#plataforma">Nossa Plataforma</a>
