--- a/Artigos/index.html
+++ b/Artigos/index.html
@@ -1,142 +1,154 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Beneficios alimentação saudavel</title>
+    <link
+      rel="stylesheet"
+      href="/beneficios-alimentacao-equilibrada/css/reset.css"
+    />
+    <link rel="stylesheet" href="CSS/artigoPrincipal.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beneficios alimentação saudavel</title>
-  <link rel="stylesheet" href="/beneficios-alimentacao-equilibrada/css/reset.css" />
-  <link rel="stylesheet" href="CSS/artigoPrincipal.css" />
-</head>
-
-<body>
-  <header>
-    <div class="logo">
-      <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
-      <a href="/FitlyApp">
-        <h2>Fitly</h2>
-      </a>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-        </li>
-        <li>
-          <a href="/FitlyApp/">Início</a>
-        </li>
-        <li>
-          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-
-  <main>
-    <section>
-      <h1>Artigos Principais</h1>
-      <ul>
-        <li>
-          <h2>Alimentação equilibrada</h2>
-          <div class="tudo">
-            <a href="alimentacaoEquilibrada.html"><img src="img artigoPrincipal/landscape-placeholder 1.png"
-                alt="img"></a>
-            <div class="texto">
-              <p>Adotar uma alimentação equilibrada é essencial para a promoção da saúde ao longo da vida.</p>
-              <a href="alimentacaoEquilibrada.html">
-                <p class="button">Acesse o Artigo</p>
-              </a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <h2>Benefícios da alimentação equilibrada</h2>
-          <div class="tudo">
-            <a href="/beneficios-alimentacao-equilibrada/beneficios.html"><img
-                src="img artigoPrincipal/landscape-placeholder 1.png" alt="img"></a>
-            <div class="texto">
-              <p>Uma alimentação equilibrada traz benefícios como mais energia, fortalecimento da imunidade e prevenção
-                de doenças.</p>
-              <a href="/beneficios-alimentacao-equilibrada/beneficios.html">
-                <p class="button">Acesse o Artigo</p>
-              </a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <h2>Micro-hábitos</h2>
-          <div class="tudo">
-            <a href="micro-habitos.html"><img
-                src="img artigoPrincipal/landscape-placeholder 1.png" alt="img"></a>
-            <div class="texto">
-              <p>Pequenas ações e hábitos de atividades físicas, que possuem um grande impacto quando somados e feitos com constância.</p>
-              <a href="micro-habitos.html">
-                <p class="button">Acesse o Artigo</p>
-              </a>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <div>
+  <body>
+    <header>
       <div class="logo">
-        <a href="index.html">
-          <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-          <h2>
-            Fitly
-          </h2>
+        <img src="/FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp">
+          <h2>Fitly</h2>
         </a>
-        <p>
-          Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-        </p>
+      </div>
+      <nav>
         <ul>
           <li>
-            <a href="">
-              <span class="fa-brands fa-instagram"></span></a>
+            <a href="/index.html">Início</a>
           </li>
           <li>
-            <a href=""><span class="fa-brands fa-tiktok"></span></a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
-      </div>
-      <div class="mapSite">
-        <h2>
-          Indice
-        </h2>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <h1>Artigos Principais</h1>
         <ul>
           <li>
-            <a href="index.html">Início</a>
+            <h2>Alimentação equilibrada</h2>
+            <div class="tudo">
+              <a href="alimentacaoEquilibrada.html"
+                ><img
+                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Adotar uma alimentação equilibrada é essencial para a promoção
+                  da saúde ao longo da vida.
+                </p>
+                <a href="alimentacaoEquilibrada.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
           </li>
           <li>
-            <a href="Sobre o projeto/sobreProjeto.html">
-              Nosso projeto
-            </a>
+            <h2>Benefícios da alimentação equilibrada</h2>
+            <div class="tudo">
+              <a href="/beneficios-alimentacao-equilibrada/beneficios.html"
+                ><img
+                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Uma alimentação equilibrada traz benefícios como mais energia,
+                  fortalecimento da imunidade e prevenção de doenças.
+                </p>
+                <a href="/beneficios-alimentacao-equilibrada/beneficios.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
           </li>
           <li>
-            <a href="Artigos/artigos.html">Artigos</a>
+            <h2>Micro-hábitos</h2>
+            <div class="tudo">
+              <a href="micro-habitos.html"
+                ><img
+                  src="img artigoPrincipal/landscape-placeholder 1.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Pequenas ações e hábitos de atividades físicas, que possuem um
+                  grande impacto quando somados e feitos com constância.
+                </p>
+                <a href="micro-habitos.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
           </li>
         </ul>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <div class="logo">
+          <a href="index.html">
+            <img
+              src="../Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a href=""> <span class="fa-brands fa-instagram"></span></a>
+            </li>
+            <li>
+              <a href=""><span class="fa-brands fa-tiktok"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="index.html">Início</a>
+            </li>
+            <li>
+              <a href="Sobre o projeto/sobreProjeto.html"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="Artigos/artigos.html">Artigos</a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
       </div>
-      <div class="contact">
-        <h2> Contato</h2>
-        <p>
-          Tem alguma dúvida? Nos contate!
-        </p>
-        <p class="email">
-          Fitlyapp1@gmail.com
-        </p>
-        <p>
-          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-        </p>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
-    </div>
-    <div class="direitos">
-      <p>
-        &copy; 2025 Fitly. Todos os direitos reservados.
-      </p>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
+</html>
