--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -1,137 +1,176 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Sobre o Projeto</title>
- <link rel="stylesheet" href="css/sobreProjeto.css" />
-</head>
-<body>
-
-  <header>
-    <div class="logo">
-      <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-      <a href="/FitlyApp"><h2>Fitly</h2></a>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-        </li>
-      <li>
-        <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
-      </li>
-      <li>
-        <a href="/index.html">Início</a>
-      </li>
-    </ul>
-    </nav>
-  </header>
-    
-  <main>
-  <section class="sobre">
-    <h1>Sobre o projeto</h1>
-    <p>O Fitly é uma plataforma inovadora dedicada à organização da alimentação diária, com foco em proporcionar uma experiência personalizada e eficaz para atingir os objetivos de saúde e bem-estar dos usuários.</p>
-    <p>Ao iniciar o uso do Fitly, o usuário será guiado por um processo simples, onde será possível informar dados essenciais, como peso, altura, sexo, idade, nível de atividade física e o objetivo específico (ganho de massa muscular, perda de gordura ou ambos simultaneamente).Nosso objetivo principal é fornecer metas realistas e atingíveis de acordo com os objetivos do usuário, como metas de curto e longo prazo (2 semanas, 1 mês, 2 meses, etc.), garantindo que a jornada alimentar seja contínua e com resultados progressivos.</p>
-     <p>O impacto esperado do Fitly é ajudar uma comunidade crescente de pelo menos 1000 pessoas a alcançarem seus objetivos de saúde de maneira sustentável.</p>
-     <h2>Colaboradores do projeto</h2>
-    </section>
-    <section class="colaboradores">
-      <div class="colab">
-        <ul class="dupla">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sobre o Projeto</title>
+    <link rel="stylesheet" href="css/sobreProjeto.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="\FitlyApp\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </div>
+      <nav>
+        <ul>
           <li>
-            <strong>Igor Marcon Michels:</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
-            <p>
-              <img class="imagem" src="/Imagens/Img integrantes/igor.jpg" alt="Igor Michels">
-            </p>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
-            <p>
-              <img class="imagem" src="/Imagens/Img integrantes/Pedroj.jpg" alt="Pedro josé">
-            </p>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a href="/index.html">Início</a>
           </li>
         </ul>
-        <ul class="dupla">
+      </nav>
+    </header>
+    <main>
+      <section id="banner">
+        <div class="IMG">
+          <img src="/FitlyApp/Imagens/img banners/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="Banner" />
+          <div class="banner">
+            <h1>Sobre o Projeto</h1>
+          </div>
+        </div>
+      </section>
+      <section class="sobre">
+        <p>
+          O Fitly é uma plataforma inovadora dedicada à organização da
+          alimentação diária, com foco em proporcionar uma experiência
+          personalizada e eficaz para atingir os objetivos de saúde e bem-estar
+          dos usuários.
+        </p>
+        <p>
+          Ao iniciar o uso do Fitly, o usuário será guiado por um processo
+          simples, onde será possível informar dados essenciais, como peso,
+          altura, sexo, idade, nível de atividade física e o objetivo específico
+          (ganho de massa muscular, perda de gordura ou ambos
+          simultaneamente).Nosso objetivo principal é fornecer metas realistas e
+          atingíveis de acordo com os objetivos do usuário, como metas de curto
+          e longo prazo (2 semanas, 1 mês, 2 meses, etc.), garantindo que a
+          jornada alimentar seja contínua e com resultados progressivos.
+        </p>
+        <p>
+          O impacto esperado do Fitly é ajudar uma comunidade crescente de pelo
+          menos 1000 pessoas a alcançarem seus objetivos de saúde de maneira
+          sustentável.
+        </p>
+        <h2>Colaboradores do projeto</h2>
+      </section>
+      <section class="colaboradores">
+        <div class="colab">
+          <ul class="dupla">
+            <li>
+              <strong>Igor Marcon Michels:</strong> Líder do projeto,
+              responsável pela entrega das partes de cada um e coordenador das
+              funções de cada um;
+              <p>
+                <img
+                  class="imagem"
+                  src="/Imagens/Img integrantes/igor.jpg"
+                  alt="Igor Michels"
+                />
+              </p>
+            </li>
+            <li>
+              <strong>Pedro José Oliveira da Roza:</strong> Responsável pela
+              pesquisa e auxiliar no desenvolvimento das partes estáticas do
+              site.
+              <p>
+                <img
+                  class="imagem"
+                  src="/Imagens/Img integrantes/Pedroj.jpg"
+                  alt="Pedro josé"
+                />
+              </p>
+            </li>
+          </ul>
+          <ul class="dupla">
+            <li>
+              <strong>Victor Feliciano:</strong> Responsável pelo
+              desenvolvimento da base de dados e as funcionalidades do app e o
+              site, como login e senha, cálculos com os dados informados pelo
+              usuário;
+            </li>
+            <li>
+              <strong>Victor Murilo Bernardes:</strong> Secretário do projeto,
+              responsável pela descrição e desenvolvimento das atas de reunião;
+              <p>
+                <img
+                  class="imagem"
+                  src="/Imagens/Img integrantes/Victor Murilo.jpeg"
+                  alt="Victor Murilo"
+                />
+              </p>
+            </li>
+          </ul>
+          <ul class="dupla">
+            <li>
+              <strong>Kaue Teixeira:</strong> Responsável por programar as
+              partes estáticas do site, além de auxiliar na pesquisa;
+            </li>
+            <li>
+              <strong>Matheus Lacerda Maximiano:</strong> Criador da
+              organização, responsável por parte da pesquisa, a parte
+              especificada está descrita no Documento;
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+  </body>
+  <footer>
+    <div>
+      <div class="logo">
+        <a href="index.html">
+          <img
+            src="/Imagens/logos/logoFitlySemTexto.png"
+            alt="Fitly_background"
+          />
+          <h2>Fitly</h2>
+        </a>
+        <p>
+          Sua jornada para uma vida mais tranquila <br />
+          começa aqui.<br />
+          Encontre treinos, dicas e muito mais!
+        </p>
+        <ul>
           <li>
-            <strong>Victor Feliciano:</strong> Responsável pelo desenvolvimento da base de dados e as funcionalidades do app e o site, como login e senha, cálculos com os dados informados pelo usuário;
+            <a href=""> <span class="fa-brands fa-instagram"></span></a>
           </li>
           <li>
-            <strong>Victor Murilo Bernardes:</strong> Secretário do projeto, responsável pela descrição e desenvolvimento das atas de reunião;
-            <p>
-              <img class="imagem" src="/Imagens/Img integrantes/Victor Murilo.jpeg" alt="Victor Murilo">
-            </p>
-          </li>
-        </ul>
-        <ul class="dupla">
-          <li>
-            <strong>Kaue Teixeira:</strong> Responsável por programar as partes estáticas do site, além de auxiliar na pesquisa;
-          </li>
-          <li>
-            <strong>Matheus Lacerda Maximiano:</strong> Criador da organização, responsável por parte da pesquisa, a parte especificada está descrita no Documento;
+            <a href=""><span class="fa-brands fa-tiktok"></span></a>
           </li>
         </ul>
       </div>
-    </section>
-    </main>
-</body>
-    <footer>
-        <div>
-            <div class="logo">
-                <a href="index.html">
-                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-                    <h2>
-                        Fitly
-                    </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href="">
-                            <span class="fa-brands fa-instagram"></span></a>
-                    </li>
-                    <li>
-                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="index.html">Início</a>
-                    </li>
-                    <li>
-                        <a href="Sobre o projeto/sobreProjeto.html">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="Artigos/artigos.html">Artigos</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
-                <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                </p>
-            </div>
-        </div>
-        <div class="direitos">
+      <div class="mapSite">
+        <h2>Indice</h2>
+        <ul>
+          <li>
+            <a href="index.html">Início</a>
+          </li>
+          <li>
+            <a href="Sobre o projeto/sobreProjeto.html"> Nosso projeto </a>
+          </li>
+          <li>
+            <a href="Artigos/artigos.html">Artigos</a>
+          </li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h2>Contato</h2>
+        <p>Tem alguma dúvida? Nos contate!</p>
+        <p class="email">Fitlyapp1@gmail.com</p>
         <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
+          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+          Federal Catarinense
         </p>
-        </div>
-    </footer>
+      </div>
+    </div>
+    <div class="direitos">
+      <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+    </div>
+  </footer>
 </html>
