Não consegui arrumar, mas tô dando commit mesmo assim, alterei a cor do fundo

--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -20,15 +20,15 @@
     <nav>
       <ul>
         <li>
-        <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-      </li>
-      <li>
-        <a href="/FitlyApp/">Início</a>
-      </li>
-      <li>
-        <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-      </li>
-    </ul>
+          <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
+        </li>
+        <li>
+          <a href="/FitlyApp/">Início</a>
+        </li>
+        <li>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+        </li>
+      </ul>
     </nav>
   </header>
   <main>
@@ -52,7 +52,7 @@
         devem ingerir os seguinte nutrientes:
       </p>
       <ul>
-          <div>
+        <div>
           <li class="carbo">
             <p>
               <strong> Carboidratos: </strong>
@@ -71,7 +71,7 @@
                 alt="Imagem_de_carboidratos" />
             </div>
           </li>
-    
+
           <li>
             <p>
               <strong> Proteínas: </strong>
@@ -90,65 +90,70 @@
                 alt="Foto_de_proteínas" />
             </div>
           </li>
-      </div>
-      <div>
-      <li>
-        <p>
-          <strong>
-            Lipídios:
-          </strong>
-          Também conhecido como gorduras, não são produzidos pelo corpo. Muitas vezes associados a ganho de peso, mas
-          também desempenham grande importância na proteção de órgãos vitais e na regulação e produção dos hormônios.
-          Algumas fontes de lipídios são, por exemplo, peixes, carnes, produtos à base de leite, etc.
-        </p>
-        <p>
-          <a
-            href="https://www.neoquimica.com.br/blog/saude/o-que-sao-lipidios-importancia-e-riscos-do-consumo-excessivo#:~:text=em%20mais%20detalhes.-,Fornecimento%20de%20energia,todo%2C%20como%20andar%20e%20falar.&text=Basicamente%2C%20a%20energia%20%C3%A9%20o,e%20a%20gordura%20(lip%C3%ADdios).&text=Al%C3%A9m%20disso%2C%20a%20gordura%20%C3%A9,pode%20fornecer%20energia%20por%20semanas.&text=Leia%20tamb%C3%A9m:%20Qual%20a%20principal%20vitamina%20para%20dar%20disposi%C3%A7%C3%A3o?">Leia
-            mais sobre Lipídios em...</a>
-        </p>
-        <div>
-          <img src="../Imagens/img Artigos/img alimentacao-equilibrada/churros-2188871_1280 1.png"
-            alt="Imagens_Churros">
         </div>
-      </li>
-      <li>
-        <p>
-          <strong>
-            Vitaminas:
-          </strong>
-          As vitaminas são essenciais para garantir o funcionamento das reações em nosso corpo, são catalizadores. De
-          outra forma, as vitaminas ajudam as reações químicas de nosso corpo a ocorrerem de forma mais rápida e
-          gastando menos energia no processo. Um exemplo de alimento rico em nutrientes são as frutas.
-        </p>
-        <p>
-          <a href="https://brasilescola.uol.com.br/biologia/vitaminas.htm">Leia mais sobre as vitaminas em...</a>
-        </p>
         <div>
-          <img src="../Imagens/img Artigos/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png"
-            alt="Imagem_de_Vitaminas">
+          <li>
+            <p>
+              <strong>
+                Lipídios:
+              </strong>
+              Também conhecido como gorduras, não são produzidos pelo corpo. Muitas vezes associados a ganho de peso,
+              mas
+              também desempenham grande importância na proteção de órgãos vitais e na regulação e produção dos
+              hormônios.
+              Algumas fontes de lipídios são, por exemplo, peixes, carnes, produtos à base de leite, etc.
+            </p>
+            <p>
+              <a
+                href="https://www.neoquimica.com.br/blog/saude/o-que-sao-lipidios-importancia-e-riscos-do-consumo-excessivo#:~:text=em%20mais%20detalhes.-,Fornecimento%20de%20energia,todo%2C%20como%20andar%20e%20falar.&text=Basicamente%2C%20a%20energia%20%C3%A9%20o,e%20a%20gordura%20(lip%C3%ADdios).&text=Al%C3%A9m%20disso%2C%20a%20gordura%20%C3%A9,pode%20fornecer%20energia%20por%20semanas.&text=Leia%20tamb%C3%A9m:%20Qual%20a%20principal%20vitamina%20para%20dar%20disposi%C3%A7%C3%A3o?">Leia
+                mais sobre Lipídios em...</a>
+            </p>
+            <div>
+              <img src="../Imagens/img Artigos/img alimentacao-equilibrada/churros-2188871_1280 1.png"
+                alt="Imagens_Churros">
+            </div>
+          </li>
+          <li>
+            <p>
+              <strong>
+                Vitaminas:
+              </strong>
+              As vitaminas são essenciais para garantir o funcionamento das reações em nosso corpo, são catalizadores.
+              De
+              outra forma, as vitaminas ajudam as reações químicas de nosso corpo a ocorrerem de forma mais rápida e
+              gastando menos energia no processo. Um exemplo de alimento rico em nutrientes são as frutas.
+            </p>
+            <p>
+              <a href="https://brasilescola.uol.com.br/biologia/vitaminas.htm">Leia mais sobre as vitaminas em...</a>
+            </p>
+            <div>
+              <img src="../Imagens/img Artigos/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png"
+                alt="Imagem_de_Vitaminas">
+            </div>
+          </li>
         </div>
-      </li>
-      </div>
-      <div>
-      <li>
-        <p>
-          <strong>
-            Água:
-          </strong>
-          Não é um nutriente, mas é tão importante quanto, senão até mais, dos já citados. A água, como é de
-          conhecimento quase geral, é a base para toda a vida, logicamente, para ter uma boa vida seria indispensável o
-          consumo da mesma.
-        </p>
-        <p>
-          <a href="https://brasilescola.uol.com.br/geografia/agua2.htm">
-            Leia mais sobre a Água em...
-          </a>
-        </p>
         <div>
-          <img src="../Imagens/img Artigos/img alimentacao-equilibrada/water-1632785_1280 1.png" alt="Imagem_de_Água">
+          <li>
+            <p>
+              <strong>
+                Água:
+              </strong>
+              Não é um nutriente, mas é tão importante quanto, senão até mais, dos já citados. A água, como é de
+              conhecimento quase geral, é a base para toda a vida, logicamente, para ter uma boa vida seria
+              indispensável o
+              consumo da mesma.
+            </p>
+            <p>
+              <a href="https://brasilescola.uol.com.br/geografia/agua2.htm">
+                Leia mais sobre a Água em...
+              </a>
+            </p>
+            <div>
+              <img src="../Imagens/img Artigos/img alimentacao-equilibrada/water-1632785_1280 1.png"
+                alt="Imagem_de_Água">
+            </div>
+          </li>
         </div>
-      </li>
-      </div>
       </ul>
     </section>
     <section class="conclusion">
