--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -29,7 +29,7 @@
       <main>
         <section id="banner">
           <div class="IMG">
-            <img src="/Imagens/img banners/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="Banner" />
+            <img src="\FitlyApp\Imagens\img banners\charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="Banner" />
             <div class="banner">
               <h1>Sobre o Projeto</h1>
             </div>
@@ -69,7 +69,7 @@
                 <p>
                   <img
                     class="imagem"
-                    src="/Imagens/Img integrantes/igor.jpg"
+                    src="/FitlyApp/Imagens/Img integrantes/igor.jpg"
                     alt="Igor Michels"
                   />
                 </p>
@@ -81,7 +81,7 @@
                 <p>
                   <img
                     class="imagem"
-                    src="/Imagens/Img integrantes/Pedroj.jpg"
+                    src="/FitlyApp/Imagens/Img integrantes/Pedroj.jpg"
                     alt="Pedro josé"
                   />
                 </p>
@@ -96,7 +96,7 @@
                 <p>
                   <img
                     class="imagem"
-                    src="/Imagens/Img integrantes/Feliciano.jpg"
+                    src="/FitlyApp/Imagens/Img integrantes/Feliciano.jpg"
                     alt="Victor Murilo"
                   />
                 </p>
@@ -107,7 +107,7 @@
                 <p>
                   <img
                     class="imagem"
-                    src="/Imagens/Img integrantes/Victor Murilo.jpeg"
+                    src="/FitlyApp/Imagens/Img integrantes/Victor Murilo.jpeg"
                     alt="Victor Murilo"
                   />
                 </p>
@@ -125,7 +125,7 @@
                 <p>
                   <img
                     class="imagem"
-                    src="/Imagens/Img integrantes/Matheus.jpg"
+                    src="/FitlyApp/Imagens/Img integrantes/Matheus.jpg"
                     alt="Matheus Maximiano Lacerda"
                   />
                 </p>
@@ -140,7 +140,7 @@
         <div class="logo">
           <a href="index.html">
             <img
-              src="/Imagens/logos/logoFitlySemTexto.png"
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
               alt="Fitly_background"
             />
             <h2>Fitly</h2>
