--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -9,19 +9,19 @@
     <body>
     <header>
       <div class="logo">
-        <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
       <nav>
         <ul>
           <li>
-            <a class="contato" href="Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
           <li>
-            <a href="Sobre-o-projeto/index.html">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
           </li>
           <li>
-            <a href="/index.html">Início</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
         </ul>
       </nav>
