Adição da minha foto

--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -117,6 +117,13 @@
               <li>
                 <strong>Kaue Teixeira:</strong> Responsável por programar as
                 partes estáticas do site, além de auxiliar na pesquisa;
+                <p>
+                  <img
+                    class="imagem"
+                    src="/Imagens/Img integrantes/Kaue.jpg"
+                    alt="Kaue Teixeira"
+                  />
+                </p>
               </li>
               <li>
                 <strong>Matheus Lacerda Maximiano:</strong> Criador da
