Correção da imagem

--- a/Sobre-o-projeto/index.html
+++ b/Sobre-o-projeto/index.html
@@ -120,7 +120,7 @@
                 <p>
                   <img
                     class="imagem"
-                    src="/Imagens/Img integrantes/Kaue.jpg"
+                    src="/FitlyApp/Imagens/Img integrantes/Kaue.jpg"
                     alt="Kaue Teixeira"
                   />
                 </p>
